# rag-database

./: main.py  pyproject.toml  rag_config.py  rag_database.py
example_docs/: Bayesian versus Frequentist.md  Bias Variance Tradeoff.md  DRAM.md  Data Integrity.md  Data Level Parallelism.md  Data Locality.md  Dennard Scaling.md  Instruction Level Parallelism.md  Matrix Derivatives.md  Memory Hierarchy.md  Memory Wall.md  Moores Law.md  Multidimensional Differential Calculus.md  Neural Networks.md  No Free Lunch Theorem.md  PINNs.md  Parametric vs. Non-Parametric Models.md  RIdge Regression.md  Relational Data Model.md  Stride.md  Thread Level Parallelism.md  Virtual Memory.md  pre-fetcher.md
src/: main.py
src/rag_database/: dataclasses.py  logger.py  rag_config.py  rag_database.py
