[project]
name = "rag-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.32.3",
    "tiktoken>=0.11.0",
    "numpy>=2.3.2",
    "openai>=1.101.0"
]

[tool.mypy]
python_version = "3.12"
python_executable = ".venv/bin/python"